--- a/styles.css
+++ b/styles.css
@@ -21,21 +21,21 @@ body {
 }
 
 /* NAVBAR*/
-/* hero background image */
+/* background image */
 .bgimage {
     height:100vh;
     background: url('image/white-clouds-in-the-blue-sky.jpg');
     background-size:cover;
     position:relative;
 }
-/* text css above hero image*/
-.hero_title {
+/* text  image*/
+.img_title {
     font-size: 4.5rem;
 }
-.hero_desc {
+.img_desc {
     font-size: 2rem;
 }
-.hero-text {
+.img-text {
     text-align: center;
     position: absolute;
     top: 50%;
