compétence de code

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 /* background image */
 .bgimage {
     height:100vh;
-    background: url('image/white-clouds-in-the-blue-sky.jpg');
+    background: url('assets/image/white-clouds-in-the-blue-sky.jpg');
     background-size:cover;
     position:relative;
 }
@@ -47,7 +47,25 @@ body {
 .imageAboutPage {
     width: 100%;
 }
-
+.skills {
+    max-width: 68.75rem;
+    margin: auto;
+    text-align: center;
+    margin-top: 2.5rem;
+  }
+  
+  .skill-header {
+    margin-bottom: 1rem;
+  }
+  
+  .skills-wrapper img {
+    padding: 1.25rem;
+  }
+  
+  .icon {
+    width: 11.875rem;
+    height: 11.25rem;
+  }
 /* FOOTER */
 #footer {
     background-color: black; 
