--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,38 @@ body {
     color: white;
     cursor: pointer;
 }
-
+/*grille*/
+.masonry {
+	
+    max-width: 75rem;
+    margin:2rem auto;
+    display: grid;
+    grid-gap: 2rem;
+    grid: masonry / repeat(auto-fit, minmax(20rem, 1fr));
+    
+        }
+    
+    
+    
+    .masonry div { 
+     
+    background: silver;
+    border-radius: 1ch;
+    overflow: hidden
+    
+    }
+    
+    
+    .masonry div img{
+    
+    display:block;
+    object-fit: cover;
+    width:100%;
+    height:100%;
+    border-radius: inherit
+    
+    }
+    
 
 
 
