--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 /* background image */
 .bgimage {
     height:100vh;
-    background: url('assets/image/white-clouds-in-the-blue-sky.jpg');
+    background: url('assets/image/02661_800x480.jpg');
     background-size:cover;
     position:relative;
 }
@@ -41,8 +41,9 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: black;
+    color: white;
 }
+
 /* section image css */
 .imageAboutPage {
     width: 100%;
@@ -89,36 +90,54 @@ body {
 }
 /*grille*/
 .masonry {
-	
     max-width: 75rem;
-    margin:2rem auto;
+    margin: 2rem auto;
     display: grid;
     grid-gap: 2rem;
-    grid: masonry / repeat(auto-fit, minmax(20rem, 1fr));
-    
-        }
-    
-    
-    
-    .masonry div { 
-     
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.masonry div {
     background: silver;
     border-radius: 1ch;
-    overflow: hidden
-    
-    }
-    
-    
-    .masonry div img{
-    
-    display:block;
+    overflow: hidden;
+    width: 100%; /* Largeur du cadre */
+    height: 0;
+    padding-bottom: 50%; /* Crée un espace réservé pour le ratio d'aspect rectangulaire (ex : 2:1) */
+    position: relative;
+}
+
+.masonry div img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    width:100%;
-    height:100%;
-    border-radius: inherit
-    
-    }
-    
-
-
-
+    border-radius: inherit;
+}
+/* Styles for modals */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 50%;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999; /* Make sure it's on top of everything */
+  }
+  
+  .modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    max-width: 80%;
+  }
+  
+  .close-modal-button {
+    margin-top: 10px;
+  }
