--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ body {
     border-radius: inherit;
 }
 
-/* styles.css */
+/* styles modale*/
 .modal {
     display: none;
     position: fixed;
@@ -135,6 +135,10 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    position: relative; 
+    transform: translate(-50%, -50%); /* Centre horizontalement et verticalement */
+    top: 50%;
+    left: 50%;
 }
 
 .close {
